// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChoiceInput should render \`checkbox\` in \`Disabled\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-control"
    >
      <div
        class="form-control-inner"
      >
        <input
          class="disabled"
          disabled=""
          id="disabled-field"
          type="checkbox"
        />
        <span
          class="form-control-icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M229.66,77.66l-128,128a8,8,0,0,1-11.32,0l-56-56a8,8,0,0,1,11.32-11.32L96,188.69,218.34,66.34a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
      </div>
      <label
        class="form-label disabled"
        for="disabled-field"
      >
        Disabled
      </label>
    </div>
  </div>
</div>
`;

exports[`ChoiceInput should render \`checkbox\` in \`Error\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-control"
    >
      <div
        class="form-control-inner"
      >
        <input
          class="error"
          id="error-field"
          type="checkbox"
        />
        <span
          class="form-control-icon"
        >
          <svg
            fill="currentColor"
            height="1em"
            viewBox="0 0 256 256"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M229.66,77.66l-128,128a8,8,0,0,1-11.32,0l-56-56a8,8,0,0,1,11.32-11.32L96,188.69,218.34,66.34a8,8,0,0,1,11.32,11.32Z"
            />
          </svg>
        </span>
      </div>
      <label
        class="form-label error"
        for="error-field"
      >
        Error
      </label>
    </div>
  </div>
</div>
`;

exports[`ChoiceInput should render \`radio\` in \`Disabled\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-control"
    >
      <div
        class="form-control-inner"
      >
        <input
          class="disabled"
          disabled=""
          id="disabled-field"
          type="radio"
        />
      </div>
      <label
        class="form-label disabled"
        for="disabled-field"
      >
        Disabled
      </label>
    </div>
  </div>
</div>
`;

exports[`ChoiceInput should render \`radio\` in \`Error\` state 1`] = `
<div>
  <div
    class="form-field-row"
  >
    <div
      class="form-control"
    >
      <div
        class="form-control-inner"
      >
        <input
          class="error"
          id="error-field"
          type="radio"
        />
      </div>
      <label
        class="form-label error"
        for="error-field"
      >
        Error
      </label>
    </div>
  </div>
</div>
`;
